Run metadata queries in async mode (#577)
- Run execution queries in `async` mode
- Run metadata queries in `async` mode
- Refactor result retrieval in Thrift by improving response handling and fixing polling
- Refactor credential refreshing by transitioning from Thrift accessor to Thrift transport
- Competing driver, SQL Gateway, and SQL Execution API also execute the queries in async mode
- Minor code cleanup

Running queries in async mode and using polling will be beneficial:
- Freeing up server resources under high load instead of holding the connection for ~5 seconds (direct results)
- If query takes more than 5 seconds, server will anyway require polling from client
- Didn't notice any regressions (slightly better performance) under high concurrent load when running queries in async mode. Some empirical results below:
  - Running a simple select query on a table with 10-15 columns for 10K rows in a concurrent environment (250 connections executing query in parallel)
- Average results when running on `main`
```
Average query time across connections: 73873.58ms
Min query time: 22075ms
Max query time: 88997ms
```
- Average results when running in `async` mode
```
Average query time across connections: 68382.95ms
Min query time: 24718ms
Max query time: 95282ms
```